# blaze3d-assimp

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  run
.github/workflows/: build.yml
private/: bytes_util.bzl
repo/: minecraft_jar.bzl
rule/: fabric_mod_jar.bzl
rule/dev_launch_wrapper/: DevLaunchWrapper.java
src/main/java/cn/chen/blaze3d/mixin/: AvatarRendererMixin.java
src/main/kotlin/cn/chen/assimp/: Blaze3dAssimp.kt  Lwjglassimp.kt
src/main/kotlin/cn/chen/assimp/anim/: AIAnimBlender.kt  AIAnimStateMachine.kt  AIAnimator.kt
src/main/kotlin/cn/chen/assimp/client/: AIClientInit.kt
src/main/kotlin/cn/chen/assimp/core/: AIAnimClip.kt  AIBonePose.kt  AIMeshData.kt  AIMorphTarget.kt  AINodeGraph.kt  AISceneData.kt  AIVertex.kt
src/main/kotlin/cn/chen/assimp/debug/: DeBug.kt
src/main/kotlin/cn/chen/assimp/loader/: AIModelLoader.kt
src/main/kotlin/cn/chen/assimp/material/: AIKhrExt.kt  AIMaterial.kt  AIPbrMat.kt  AITexInfo.kt
src/main/kotlin/cn/chen/assimp/math/: AIAABB.kt  AIMat4.kt  AIQuat.kt  AIVec3.kt  AIVec4.kt
src/main/kotlin/cn/chen/assimp/render/: AIBatchCompiler.kt  AIBoneBuffer.kt  AICascadeShadowRenderer.kt  AIEnvironmentMap.kt  AIGpuBatch.kt  AIGpuPassRenderer.kt  AIImageDecoder.kt  AILightCollector.kt  AILightsBuffer.kt  AIMaterialBuffer.kt  AIModelInstance.kt  AIObjectBuffer.kt  AIPipelines.kt  AIRenderPass.kt  AIShadowBuffer.kt  AIShadowMap.kt  AITextureRegistry.kt  AIWorldProbe.kt  AIWorldRenderer.kt
src/main/kotlin/cn/chen/blaze3d/: Blaze3d.kt
src/main/kotlin/cn/chen/blaze3d/advanced/: Acceleration.kt  BvhRefit.kt  InstanceSystems.kt  ModuleSystems.kt
src/main/kotlin/cn/chen/blaze3d/anim/: AnimBlender.kt  AnimStateMachine.kt  AnimationLibrary.kt  Animator.kt  StateMachineDsl.kt
src/main/kotlin/cn/chen/blaze3d/api/: ModelApi.kt  ModelFormats.kt
src/main/kotlin/cn/chen/blaze3d/async/: GpuUploadQueue.kt  RenderWorker.kt
src/main/kotlin/cn/chen/blaze3d/client/: ClientInit.kt  Runtime.kt
src/main/kotlin/cn/chen/blaze3d/core/: AnimClip.kt  BonePose.kt  MeshData.kt  MorphTarget.kt  NodeGraph.kt  SceneData.kt  Transform.kt  Vertex.kt
src/main/kotlin/cn/chen/blaze3d/dae/: DaeSupport.kt
src/main/kotlin/cn/chen/blaze3d/fbx/: FbxSupport.kt
src/main/kotlin/cn/chen/blaze3d/gltf/: GltfSupport.kt
src/main/kotlin/cn/chen/blaze3d/loader/: AssetFingerprint.kt  HotReload.kt  ModelCache.kt  UniversalModelLoader.kt
src/main/kotlin/cn/chen/blaze3d/lwjgl/: LwjglSdk.kt
src/main/kotlin/cn/chen/blaze3d/material/: KhrExt.kt  Material.kt  TexInfo.kt
src/main/kotlin/cn/chen/blaze3d/math/: AABB.kt  Mat4.kt  Pool.kt  Quat.kt  Vec3.kt  Vec4.kt
src/main/kotlin/cn/chen/blaze3d/mmd/: MmdActionMapper.kt  MmdBinary.kt  MmdData.kt  MmdDefaultMotionLibrary.kt  MmdMotionCompiler.kt  MmdParsers.kt  MmdProfiles.kt  MmdProjectConfig.kt  MmdRuntime.kt  MmdStageSystems.kt  MmdSupport.kt
src/main/kotlin/cn/chen/blaze3d/physics/: BulletNative.kt  BulletWorld.kt  PhysicsBinding.kt  PhysicsShape.kt  Softbody.kt
src/main/kotlin/cn/chen/blaze3d/player/: PlayerSystems.kt
src/main/kotlin/cn/chen/blaze3d/preset/: ModelPreset.kt
src/main/kotlin/cn/chen/blaze3d/render/: AutoLod.kt  BatchCompiler.kt  BoneBuffer.kt  CascadedShadowMap.kt  DeferredPass.kt  GpuBatch.kt  GpuCulling.kt  GpuPassRenderer.kt  GpuSkinning.kt  HdrPipeline.kt  ImageDecoder.kt  ModelInstance.kt  PerformanceConfig.kt  Pipelines.kt  RenderPass.kt  TextureAtlas.kt  TextureRegistry.kt  VertexCompression.kt  WorldRenderer.kt
src/main/kotlin/cn/chen/blaze3d/sync/: ModelSync.kt  ModelSyncEngine.kt
src/main/kotlin/cn/chen/blaze3d/ysm/: YsmCodec.kt  YsmLoader.kt  YsmSupport.kt
src/main/resources/: blaze3d-model.mixins.json  fabric.mod.json  lwjgl-assimp.mixins.json
src/main/resources/assets/blaze3d-model/shaders/compute/: model_culling.csh  model_skinning.csh
src/main/resources/assets/blaze3d-model/shaders/program/: model_bloom_downsample.fsh  model_bloom_upsample.fsh  model_deferred_lighting.fsh  model_gbuffer.fsh  model_shadow_pass.vsh  model_shadow_sample.fsh  model_tonemap.fsh
src/main/resources/assets/minecraft/shaders/core/: ai_model.fsh  ai_model.vsh  ai_pbr.fsh  ai_pbr.vsh  ai_shadow.fsh  ai_shadow.vsh  blaze3d_model.fsh  blaze3d_model.vsh
src/main/resources/assets/minecraft/shaders/include/: ai_skinning.glsl
