load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin", "kt_kotlinc_options")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//rule:fabric_mod_jar.bzl", "fabric_mod_jar")
VERSION = "1.0.0"
MC_VERSION = "26.2-snapshot-7"
FABRIC_SUPPORT = "fabric-loader>=0.19.2 fabric-api=0.148.3+26.2"
kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = ["@rules_kotlin//kotlin/compiler:kotlinx-serialization-compiler-plugin"],
)
kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    visibility = ["//visibility:public"],
    exported_compiler_plugins = [":serialization_plugin"],
    exports = ["@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm"],
)
kt_kotlinc_options(name = "kotlinc_opts", jvm_target = "25")
_MC_DEPS = ["@minecraft//:26.2-snapshot-7_client", "@minecraft//:26.2-snapshot-7_client_libraries", "@maven//:org_joml_joml"]
_FABRIC_DEPS = ["@maven//:net_fabricmc_fabric_loader", "@maven//:net_fabricmc_fabric_api_fabric_api", "@maven//:net_fabricmc_fabric_language_kotlin"]
_LWJGL_JARS = [
    "@maven//:org_lwjgl_lwjgl_assimp", "@maven//:org_lwjgl_lwjgl_assimp_natives_linux", "@maven//:org_lwjgl_lwjgl_assimp_natives_linux_arm64", "@maven//:org_lwjgl_lwjgl_assimp_natives_macos", "@maven//:org_lwjgl_lwjgl_assimp_natives_macos_arm64", "@maven//:org_lwjgl_lwjgl_assimp_natives_windows", "@maven//:org_lwjgl_lwjgl_assimp_natives_windows_arm64",
    "@maven//:org_lwjgl_lwjgl_shaderc", "@maven//:org_lwjgl_lwjgl_shaderc_natives_linux", "@maven//:org_lwjgl_lwjgl_shaderc_natives_linux_arm64", "@maven//:org_lwjgl_lwjgl_shaderc_natives_macos", "@maven//:org_lwjgl_lwjgl_shaderc_natives_macos_arm64", "@maven//:org_lwjgl_lwjgl_shaderc_natives_windows", "@maven//:org_lwjgl_lwjgl_shaderc_natives_windows_arm64",
    "@maven//:org_lwjgl_lwjgl_stb", "@maven//:org_lwjgl_lwjgl_stb_natives_linux", "@maven//:org_lwjgl_lwjgl_stb_natives_linux_arm64", "@maven//:org_lwjgl_lwjgl_stb_natives_macos", "@maven//:org_lwjgl_lwjgl_stb_natives_macos_arm64", "@maven//:org_lwjgl_lwjgl_stb_natives_windows", "@maven//:org_lwjgl_lwjgl_stb_natives_windows_arm64",
    "@maven//:org_lwjgl_lwjgl_vma", "@maven//:org_lwjgl_lwjgl_vma_natives_linux", "@maven//:org_lwjgl_lwjgl_vma_natives_linux_arm64", "@maven//:org_lwjgl_lwjgl_vma_natives_macos", "@maven//:org_lwjgl_lwjgl_vma_natives_macos_arm64", "@maven//:org_lwjgl_lwjgl_vma_natives_windows", "@maven//:org_lwjgl_lwjgl_vma_natives_windows_arm64",
]
_BULLET_JARS = ["@maven//:com_github_stephengold_Libbulletjme_Linux64", "@maven//:com_github_stephengold_Libbulletjme_Windows64", "@maven//:com_github_stephengold_Libbulletjme_MacOSX64", "@maven//:com_github_stephengold_Libbulletjme_MacOSX_ARM64", "@maven//:com_github_stephengold_Libbulletjme_Linux64_SpMtRelease", "@maven//:com_github_stephengold_Libbulletjme_Windows64_SpMtRelease", "@maven//:com_github_stephengold_Libbulletjme_MacOSX64_SpRelease", "@maven//:com_github_stephengold_Libbulletjme_MacOSX_ARM64_SpRelease"]
_LIBBULLET_API = ["@maven//:com_github_stephengold_Libbulletjme_Linux64", "@maven//:com_github_stephengold_Libbulletjme_Windows64", "@maven//:com_github_stephengold_Libbulletjme_MacOSX64", "@maven//:com_github_stephengold_Libbulletjme_MacOSX_ARM64"]
kt_jvm_library(name = "blaze3d_model_lib", srcs = glob(["src/main/kotlin/**/*", "src/main/java/**/*"]), resources = glob(["src/main/resources/**"]), kotlinc_opts = ":kotlinc_opts", plugins = [":serialization_plugin"], visibility = ["//visibility:public"], deps = _MC_DEPS + _FABRIC_DEPS + _LWJGL_JARS + _LIBBULLET_API + ["@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm", "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json_jvm", "@maven//:net_fabricmc_sponge_mixin"])
fabric_mod_jar(name = "blaze3d-model", output = "blaze3d-model-" + VERSION + ".jar", version = VERSION, srcs = [":blaze3d_model_lib"], jars_in_jar = _LWJGL_JARS + _BULLET_JARS)
fabric_mod_jar(name = "fabric_mod", output = "blaze3d-model-" + VERSION + ".jar", version = VERSION, srcs = [":blaze3d_model_lib"], jars_in_jar = _LWJGL_JARS + _BULLET_JARS)
