module(
    name = "blaze3d-model",
    version = "1.0.0",
)
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_jvm_external", version = "6.9")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = ["blaze3d-model", "protobuf"],
    artifacts = [
        "org.jetbrains.kotlin:kotlin-stdlib:2.3.21",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:1.8.0",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0",
        "org.jetbrains:annotations:26.0.2",
        "net.fabricmc:fabric-loader:0.19.2",
        "net.fabricmc.fabric-api:fabric-api:0.148.3+26.2",
        "net.fabricmc:fabric-language-kotlin:1.13.11+kotlin.2.3.21",
        "net.fabricmc:sponge-mixin:0.17.3+mixin.0.8.7",
        "org.lwjgl:lwjgl-assimp:3.4.1",
        "org.lwjgl:lwjgl-stb:3.4.1",
        "org.lwjgl:lwjgl-shaderc:3.4.1",
        "org.lwjgl:lwjgl-vma:3.4.1",
        "com.github.stephengold:Libbulletjme-Linux64:23.0.0",
        "com.github.stephengold:Libbulletjme-Windows64:23.0.0",
        "com.github.stephengold:Libbulletjme-MacOSX64:23.0.0",
        "com.github.stephengold:Libbulletjme-MacOSX_ARM64:23.0.0",
        "com.github.stephengold:Libbulletjme-Linux64:23.0.0:SpMtRelease",
        "com.github.stephengold:Libbulletjme-Windows64:23.0.0:SpMtRelease",
        "com.github.stephengold:Libbulletjme-MacOSX64:23.0.0:SpRelease",
        "com.github.stephengold:Libbulletjme-MacOSX_ARM64:23.0.0:SpRelease",
        "org.lwjgl:lwjgl-assimp:3.4.1:natives-linux",
        "org.lwjgl:lwjgl-assimp:3.4.1:natives-linux-arm64",
        "org.lwjgl:lwjgl-assimp:3.4.1:natives-macos",
        "org.lwjgl:lwjgl-assimp:3.4.1:natives-macos-arm64",
        "org.lwjgl:lwjgl-assimp:3.4.1:natives-windows",
        "org.lwjgl:lwjgl-assimp:3.4.1:natives-windows-arm64",
        "org.lwjgl:lwjgl-stb:3.4.1:natives-linux",
        "org.lwjgl:lwjgl-stb:3.4.1:natives-linux-arm64",
        "org.lwjgl:lwjgl-stb:3.4.1:natives-macos",
        "org.lwjgl:lwjgl-stb:3.4.1:natives-macos-arm64",
        "org.lwjgl:lwjgl-stb:3.4.1:natives-windows",
        "org.lwjgl:lwjgl-stb:3.4.1:natives-windows-arm64",
        "org.lwjgl:lwjgl-shaderc:3.4.1:natives-linux",
        "org.lwjgl:lwjgl-shaderc:3.4.1:natives-linux-arm64",
        "org.lwjgl:lwjgl-shaderc:3.4.1:natives-macos",
        "org.lwjgl:lwjgl-shaderc:3.4.1:natives-macos-arm64",
        "org.lwjgl:lwjgl-shaderc:3.4.1:natives-windows",
        "org.lwjgl:lwjgl-shaderc:3.4.1:natives-windows-arm64",
        "org.lwjgl:lwjgl-vma:3.4.1:natives-linux",
        "org.lwjgl:lwjgl-vma:3.4.1:natives-linux-arm64",
        "org.lwjgl:lwjgl-vma:3.4.1:natives-macos",
        "org.lwjgl:lwjgl-vma:3.4.1:natives-macos-arm64",
        "org.lwjgl:lwjgl-vma:3.4.1:natives-windows",
        "org.lwjgl:lwjgl-vma:3.4.1:natives-windows-arm64",
        "org.ow2.asm:asm:9.9.1",
        "org.ow2.asm:asm-tree:9.9.1",
        "org.ow2.asm:asm-commons:9.9.1",
        "org.joml:joml:1.10.8",
    ],
    repositories = [
        "https://maven.fabricmc.net/",
        "https://repo1.maven.org/maven2",
    ],
    fail_if_repin_required = False,
)
use_repo(maven, "maven")
minecraft = use_extension("//repo:minecraft_jar.bzl", "minecraft")
minecraft.minecraft_jar(
    version = "26.2-snapshot-7",
    type = "client",
    assets = True,
    mapping = False,
)
minecraft.exclude_library(names = ["org.ow2.asm:asm:9.6"])
use_repo(minecraft, "minecraft")
use_repo(minecraft, "minecraft_assets")
